--- a/shape-selector/style.css
+++ b/shape-selector/style.css
@@ -33,8 +33,7 @@ h1{
 #no-of-shape{
     box-shadow: 4px 4px 4px gray;
     width: 250px;
-    font-style: italic;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: medium;
 }
 #submit{
     width: 85px;
@@ -63,7 +62,7 @@ h1{
     top: 155px;
     width: 50px;
     height: 50px;
-    background-color: rgb(198, 155, 237);
+    background-color: rgb(163, 102, 220);
 }
 .rectangle{
     position: relative;
